# ARIS_lite

./: .pre-commit-config.yaml  .zenodo.json  README.md  pyproject.toml
aris_lite/: __init__.py  deprecation.py  paths.py  phenology.py  water_budget.py  yield_expectation.py
aris_lite/cli/: __init__.py  calc_pheno.py  calc_waterbudget.py  calc_yield.py  cmd_1go.py  legacy_wrappers.py  main.py
docs/: .gitignore  aris_lite.rst  conf.py  index.rst  installation.rst  introduction.rst  refs.bib  requirements.txt  usage.rst
tests/: test_cli_routing.py  test_legacy_wrappers.py  test_paths.py  test_python_deprecations.py
