[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aris_lite"
authors = [{name = "Jan Haacker", email = "jan.haacker@boku.ac.at"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies= [
  "dask[complete]",
  "numpy",
  "pandas",
  "snowmaus",
  "xarray[accel,io,parallel]",
  "zarr>=3",
]

[project.optional-dependencies]
docs = [
  "myst-parser",
  "sphinx",
  "sphinx-immaterial",
  "sphinxcontrib-bibtex",
]

[project.scripts]
aris-1go = "aris_lite.__init__:cli"
aris-calc-waterbudget = "aris_lite.water_budget:main_cli"
aris-calc-pheno = "aris_lite.phenology:main_cli"
aris-calc-yield = "aris_lite.yield_expectation:main_cli"

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "flit",
    "pigar",
    "ruff",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-immaterial",
    "sphinxcontrib-bibtex",
]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["aris_lite"]
typeCheckingMode = "standard"  # move to "strict" later

[tool.ruff.lint]
select = ["E", "F"]
