[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aris_lite"
authors = [{name = "Jan Haacker", email = "jan.haacker@boku.ac.at"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies= [
  "dask[complete]",
  "numpy",
  "pandas",
  "snowmaus",
  "xarray[accel,io,parallel]",
  "zarr>=3",
]

[project.optional-dependencies]
docs = [
  "myst-parser",
  "sphinx",
  "sphinx-immaterial",
  "sphinxcontrib-bibtex",
]

[project.scripts]
aris = "aris_lite.cli.main:main_cli"
aris-1go = "aris_lite.cli.legacy_wrappers:legacy_1go_cli"
aris-calc-waterbudget = "aris_lite.cli.legacy_wrappers:legacy_waterbudget_cli"
aris-calc-pheno = "aris_lite.cli.legacy_wrappers:legacy_pheno_cli"
aris-calc-yield = "aris_lite.cli.legacy_wrappers:legacy_yield_cli"

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "flit",
    "pigar",
    "ruff",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-immaterial",
    "sphinxcontrib-bibtex",
]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["aris_lite"]
typeCheckingMode = "standard"  # move to "strict" later

[tool.ruff.lint]
select = ["E", "F"]
